<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>gestionRestaurante</groupId>
  <artifactId>Restaurante</artifactId>
  <version>1.0.0</version>
  <packaging>jar</packaging>

  <name>Restaurante</name>
  <description>App Restaurante</description>
  <url>http://www.example.com</url>



  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

  <dependencies>

	<dependency>
    <groupId>org.junit.platform</groupId>
    <artifactId>junit-platform-commons</artifactId>
    <version>1.7.0</version>
	</dependency>

	<dependency>
   	<groupId>org.junit.jupiter</groupId>
   	 <artifactId>junit-jupiter-api</artifactId>
   	 <version>5.7.0</version>
   	 <scope>test</scope>
	</dependency>

	
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.7.0</version>
      <scope>test</scope>
    </dependency>
	
	
	
	
	<dependency>
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-api</artifactId>
    <version>1.7.9</version>
	</dependency>
	<dependency>
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-simple</artifactId>
    <version>1.7.9</version>
	</dependency>
	
	<dependency>
        <groupId>org.junit.vintage</groupId>
        <artifactId>junit-vintage-engine</artifactId>
        <scope>test</scope>
		<version>5.7.0</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>5.7.0</version>
      <scope>test</scope>
    </dependency>
	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->

    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
    <dependency>
  	 <groupId>mysql</groupId>
  	 <artifactId>mysql-connector-java</artifactId>
  	 <version>5.1.6</version>
    </dependency>
	<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-runner -->
	<dependency>
   	 <groupId>org.junit.platform</groupId>
  	  <artifactId>junit-platform-runner</artifactId>
  	  <version>1.8.2</version>
  	  <scope>test</scope>
	</dependency>

	<dependency>
 	<groupId>org.mockito</groupId>
	 <artifactId>mockito-core</artifactId>
 	<version>1.10.19</version>
 	</dependency>
  </dependencies>

	

  <build>

    <plugins>
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
            </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.0</version>
				<configuration>
				   
        		<testFailureIgnore>true</testFailureIgnore> 
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
      </plugin>

			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>

    </plugins>

  </build>
</project>
